--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -42,4 +42,9 @@
         <item name="android:textSize">@dimen/dimens32sp</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
+    <style name="dialogAnimation">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
 </resources>
