--- a/app/src/main/res/layout/item_today.xml
+++ b/app/src/main/res/layout/item_today.xml
@@ -97,172 +97,198 @@
             app:cardCornerRadius="@dimen/dimens10dp"
             android:visibility="gone"
             android:background="@color/black">
-                <TextView
-                    android:id="@+id/cardPerceived"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens18dp"
-                    android:layout_marginTop="@dimen/dimens18dp"
-                    android:text="@string/perceived"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:fontFamily="@font/inter"/>
 
-                <TextView
-                    android:id="@+id/cardPerceivedGradeVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens18dp"
-                    android:layout_marginTop="@dimen/dimens38dp"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inter"/>
-
-                <TextView
-                    android:id="@+id/cardUv"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens190dp"
-                    android:layout_marginTop="@dimen/dimens18dp"
-                    android:text="@string/UV"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:fontFamily="@font/inter"/>
-
-                <TextView
-                    android:id="@+id/cardUvVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens190dp"
-                    android:layout_marginTop="@dimen/dimens38dp"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inter"/>
-
-                <ImageView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/vector_1"
-                    android:layout_marginTop="@dimen/dimens72dp"
-                    android:layout_marginStart="@dimen/dimens20dp"
-                    android:layout_marginEnd="@dimen/dimens20dp" />
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/dimens18dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/cardHumidity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens18dp"
-                    android:layout_marginTop="@dimen/dimens84dp"
-                    android:text="@string/humidity"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:fontFamily="@font/inter"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:layout_weight="1">
 
-                <TextView
-                    android:id="@+id/cardHumidityVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens18dp"
-                    android:layout_marginTop="@dimen/dimens106dp"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inter"/>
+                                <TextView
+                                    android:id="@+id/cardPerceived"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/perceived"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
 
-                <TextView
-                    android:id="@+id/cardWind"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens190dp"
-                    android:layout_marginTop="@dimen/dimens84dp"
-                    android:text="@string/wind"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:fontFamily="@font/inter"/>
+                                <TextView
+                                    android:id="@+id/cardPerceivedGradeVal"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=""
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
 
-                <TextView
-                    android:id="@+id/cardWindDirectionVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens190dp"
-                    android:layout_marginTop="@dimen/dimens106dp"
-                    android:text="@string/WSW"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inter"/>
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:src="@drawable/vector_1"/>
 
-                <TextView
-                    android:id="@+id/cardWindVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens238dp"
-                    android:layout_marginTop="@dimen/dimens106dp"
-                    android:fontFamily="@font/inter"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold" />
+                                <TextView
+                                    android:id="@+id/cardHumidity"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/humidity"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/vector_1"
-                    android:layout_marginTop="@dimen/dimens142dp"
-                    android:layout_marginStart="@dimen/dimens20dp"
-                    android:layout_marginEnd="@dimen/dimens20dp" />
+                                <TextView
+                                    android:id="@+id/cardHumidityVal"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=""
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
 
-                <TextView
-                    android:id="@+id/cardCoverage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens18dp"
-                    android:layout_marginTop="@dimen/dimens153dp"
-                    android:text="@string/cover"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:fontFamily="@font/inter"/>
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:src="@drawable/vector_1"/>
 
-                <TextView
-                    android:id="@+id/cardCoverageVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens18dp"
-                    android:layout_marginTop="@dimen/dimens175dp"
-                    android:layout_marginBottom="@dimen/dimens18dp"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inter"/>
+                                <TextView
+                                    android:id="@+id/cardCoverage"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/cover"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
 
-                <TextView
-                    android:id="@+id/cardRain"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens190dp"
-                    android:layout_marginTop="@dimen/dimens153dp"
-                    android:fontFamily="@font/inter"
-                    android:text="@string/rain"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp" />
+                                <TextView
+                                    android:id="@+id/cardCoverageVal"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=""
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
 
-                <TextView
-                    android:id="@+id/cardRainVal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/dimens190dp"
-                    android:layout_marginTop="@dimen/dimens175dp"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/inter"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/cardUv"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/UV"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
+
+                                <TextView
+                                    android:id="@+id/cardUvVal"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=""
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:src="@drawable/vector_1"/>
+
+                                <TextView
+                                    android:id="@+id/cardWind"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/wind"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:layout_weight="1">
+
+                                        <TextView
+                                            android:id="@+id/cardWindDirectionVal"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:text=""
+                                            android:textColor="@color/black"
+                                            android:textSize="@dimen/dimens16sp"
+                                            android:textStyle="bold"
+                                            android:fontFamily="@font/inter"/>
+
+                                        <TextView
+                                            android:id="@+id/cardWindVal"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:fontFamily="@font/inter"
+                                            android:text=""
+                                            android:textColor="@color/black"
+                                            android:textSize="@dimen/dimens16sp"
+                                            android:textStyle="bold"/>
+
+                                </LinearLayout>
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:src="@drawable/vector_1"/>
+
+                                <TextView
+                                    android:id="@+id/cardRain"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/inter"
+                                    android:text="@string/rain"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:layout_weight="1"/>
+
+                                <TextView
+                                    android:id="@+id/cardRainVal"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=""
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/dimens16sp"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/inter"
+                                    android:layout_weight="1"/>
+
+                        </LinearLayout>
+
+                </LinearLayout>
+
         </androidx.cardview.widget.CardView>
 
 </LinearLayout>
