--- a/app/src/main/res/layout/fragment_error.xml
+++ b/app/src/main/res/layout/fragment_error.xml
@@ -36,11 +36,11 @@
             android:layout_marginTop="@dimen/dimens30dp"
             android:gravity="center"
             android:text="@string/error_message"
-            android:textSize="@dimen/dimens16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/error_image" />
-
+            app:layout_constraintTop_toBottomOf="@+id/error_image"
+            style="@style/value_16_sp"/>
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
