--- a/app/src/main/res/layout/fragment_error_retry.xml
+++ b/app/src/main/res/layout/fragment_error_retry.xml
@@ -31,16 +31,16 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/message_error_retry"
+            android:id="@+id/message_error"
             android:layout_width="match_parent"
             android:layout_height="77dp"
             android:layout_marginTop="@dimen/dimens30dp"
             android:gravity="center"
             android:text="@string/error_message"
-            android:textSize="@dimen/dimens16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/error_image" />
+            app:layout_constraintTop_toBottomOf="@+id/error_image"
+            style="@style/value_16_sp"/>
 
         <Button
             android:id="@+id/retry_button_2"
@@ -50,6 +50,9 @@
             android:text="@string/retry"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:fontFamily="@font/inter"
             app:layout_constraintTop_toBottomOf="@+id/message_error" />
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
