--- a/app/src/main/res/layout/item_tomorrow.xml
+++ b/app/src/main/res/layout/item_tomorrow.xml
@@ -21,10 +21,8 @@
                     android:id="@+id/hour_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter"
                     android:text=""
-                    android:textColor="@color/blue_text"
-                    android:textSize="@dimen/dimens16sp" />
+                    style="@style/title_day_16_sp"/>
 
                 <ImageView
                     android:id="@+id/weather_image_item"
@@ -39,12 +37,9 @@
                     android:id="@+id/grade_item"
                     android:layout_width="@dimen/dimens20dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter"
                     android:text=""
-                    android:textColor="@color/black"
                     android:layout_weight="1"
-                    android:textSize="@dimen/dimens20sp"
-                    android:textStyle="bold" />
+                    style="@style/value_20_sp_bold" />
 
                 <ImageView
                     android:id="@+id/drop"
@@ -58,11 +53,8 @@
                     android:id="@+id/humidity_percentage_item"
                     android:layout_width="@dimen/dimens20dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/inter"
                     android:text=""
-                    android:layout_weight="0.5"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/dimens20sp" />
+                    style="@style/value_20_sp" />
 
                 <ImageView
                     android:id="@+id/arrow_cardView"
@@ -115,75 +107,56 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/perceived"
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp" />
 
                                 <TextView
                                     android:id="@+id/cardPerceivedGradeVal"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=""
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:textStyle="bold"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp_bold" />
 
                                 <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:src="@drawable/vector_1"/>
+                                    android:src="@drawable/vector_1"
+                                    style="@style/vector_style" />
 
                                 <TextView
                                     android:id="@+id/cardHumidity"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/humidity"
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp"/>
 
                                 <TextView
                                     android:id="@+id/cardHumidityVal"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=""
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:textStyle="bold"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp_bold" />
 
                                 <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:src="@drawable/vector_1"/>
+                                    android:src="@drawable/vector_1"
+                                    style="@style/vector_style" />
 
                                 <TextView
                                     android:id="@+id/cardCoverage"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/cover"
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp" />
 
                                 <TextView
                                     android:id="@+id/cardCoverageVal"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=""
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:textStyle="bold"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp_bold"/>
 
                         </LinearLayout>
 
@@ -198,37 +171,28 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/UV"
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp"/>
 
                                 <TextView
                                     android:id="@+id/cardUvVal"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=""
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:textStyle="bold"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp_bold"/>
 
                                 <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:src="@drawable/vector_1"/>
+                                    android:src="@drawable/vector_1"
+                                    style="@style/vector_style" />
 
                                 <TextView
                                     android:id="@+id/cardWind"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/wind"
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp"/>
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -241,57 +205,42 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:text=""
-                                            android:textColor="@color/black"
-                                            android:textSize="@dimen/dimens16sp"
-                                            android:textStyle="bold"
-                                            android:fontFamily="@font/inter"/>
+                                            style="@style/value_16_sp_bold" />
 
                                         <TextView
                                             android:id="@+id/cardWindVal"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:fontFamily="@font/inter"
                                             android:text=""
-                                            android:textColor="@color/black"
-                                            android:textSize="@dimen/dimens16sp"
-                                            android:textStyle="bold"/>
+                                            style="@style/value_16_sp_bold" />
 
                                 </LinearLayout>
 
                                 <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_weight="1"
-                                    android:src="@drawable/vector_1"/>
+                                    android:src="@drawable/vector_1"
+                                    style="@style/vector_style" />
 
                                 <TextView
                                     android:id="@+id/cardRain"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:fontFamily="@font/inter"
                                     android:text="@string/rain"
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp"/>
 
                                 <TextView
                                     android:id="@+id/cardRainVal"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=""
-                                    android:textColor="@color/black"
-                                    android:textSize="@dimen/dimens16sp"
-                                    android:textStyle="bold"
-                                    android:fontFamily="@font/inter"
-                                    android:layout_weight="1"/>
+                                    android:layout_weight="1"
+                                    style="@style/value_16_sp_bold" />
 
                         </LinearLayout>
 
                 </LinearLayout>
 
         </androidx.cardview.widget.CardView>
-
-
 
 </LinearLayout>
 
