--- a/app/src/main/res/layout/screen_search.xml
+++ b/app/src/main/res/layout/screen_search.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/search_fragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/screen_search_background_color"
     tools:context=".features.ui.search.SearchScreen"
     android:orientation="vertical"
@@ -28,8 +29,7 @@
         android:layout_marginTop="@dimen/dimens22dp"
         android:text="@string/recent_researches"
         android:visibility="gone"
-        android:textSize="@dimen/dimens15sp"
-        android:textColor="#230EA5"/>
+        style="@style/title_day_16_sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_recyclerview"
@@ -37,4 +37,5 @@
         android:layout_height="wrap_content"
         tools:listitem="@layout/search_screen_item"
         android:layout_marginTop="@dimen/dimens24dp"/>
+
 </LinearLayout>
