--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,7 +28,7 @@
         <item name="android:fontFamily">@font/inter</item>
     </style>
 
-    <style name="home_30_sp">
+    <style name="home_20_sp_bold">
         <item name="android:textSize">@dimen/dimens20sp</item>
         <item name="android:textColor">@color/white_text</item>
         <item name="android:fontFamily">@font/inter</item>
